--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,7 @@ html {
 #mainNav .navbar-toggler {
   font-size: 80%;
   padding: 0.8rem;
+  background-color: #1abc9c;
 }
 
 @media (min-width: 992px) {
